# my-yolo-test

./: CMakeLists.txt  README.md  main.cpp  yolo.cpp  yolo.h
config/: model_config.yaml
